force-app/main/default/objects/redwing__Learning_Batch_Operation__c/redwing__Learning_Batch_Operation__c.object-meta.xml
<CustomObject>
    <label>Learning Batch Operation</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Learning Batch Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Batch Operations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>