force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Id__c</fullName>
    <inlineHelpText>Unique Salesforce Id of apex job.</inlineHelpText>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>