force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Batch_Operation_Stage__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Operation_Stage__c</fullName>
    <inlineHelpText>Defines a batch operation stage.</inlineHelpText>
    <label>Batch Operation Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>