force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Status__c</fullName>
    <inlineHelpText>Defines a batch status.</inlineHelpText>
    <label>Batch Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>