force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Type__c</fullName>
    <inlineHelpText>Defines batch type.</inlineHelpText>
    <label>Batch Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple Assignment</fullName>
            </value>
            <value>
                <fullName>Auto-Assign Process</fullName>
            </value>
            <value>
                <fullName>Related Learning</fullName>
            </value>
            <value>
                <fullName>ILT Users Batch</fullName>
            </value>
            <value>
                <fullName>Learning Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>