force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Record ID of the Object this Learning Batch Operation is related to (e.g. Learning Plan, Learning Trac).</inlineHelpText>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>