force-app/main/default/objects/redwing__Learning_Batch_Operation__c/fields/redwing__Processing_Errors__c.field-meta.xml
<CustomField>
    <fullName>redwing__Processing_Errors__c</fullName>
    <label>Processing Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>