force-app/main/default/objects/redwing__Learning_Batch_Operation__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Batch_Id__c</columns>
    <columns>redwing__Batch_Type__c</columns>
    <columns>redwing__Batch_Status__c</columns>
    <columns>redwing__Batch_Operation_Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>redwing__Processing_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>